@@ -1,0 +1,15 @@
+			
+#############################################################################
+#
+#		Copyright (C) Microsoft Corporation 1995, 1996
+#       All Rights Reserved.
+#
+#       MAKEFILE for FILTER directory
+#
+#############################################################################
+
+!ifdef NTMAKEENV
+!include $(NTMAKEENV)\makefile.def
+!else
+# The current makefile go here
+!endif
